20010920
 - (tim) [scard/Makefile.in] Don't strip the Java binary
 - (stevesk) sun_len, SUN_LEN() configure stuff no longer required
 - (bal) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/09/20 00:15:54
     [sshd.8]
     fix ClientAliveCountMax
   - markus@cvs.openbsd.org 2001/09/20 13:46:48
     [auth2.c]
     key_read returns now -1 or 1

20010919
 - (bal) OpenBSD Sync
   - markus@cvs.openbsd.org 2001/09/19 10:08:51
     [sshd.8]
     command=xxx applies to subsystem now, too
   - markus@cvs.openbsd.org 2001/09/19 13:23:29
     [key.c]
     key_read() now returns -1 on type mismatch, too
   - stevesk@cvs.openbsd.org 2001/09/19 19:24:19
     [readconf.c readconf.h scp.c sftp.c ssh.1]
     add ClearAllForwardings ssh option and set it in scp and sftp; ok 
     markus@
   - stevesk@cvs.openbsd.org 2001/09/19 19:35:30
     [authfd.c]
     use sizeof addr vs. SUN_LEN(addr) for sockaddr_un.  Stevens 
     blesses this and we do it this way elsewhere.  this helps in 
     portable because not all systems have SUN_LEN() and 
     sockaddr_un.sun_len.  ok markus@
   - stevesk@cvs.openbsd.org 2001/09/19 21:04:53
     [sshd.8]
     missing -t in usage
   - stevesk@cvs.openbsd.org 2001/09/19 21:41:57
     [sshd.8]
     don't advertise -V in usage; ok markus@
 - (bal) openbsd-compat/vis.[ch] is dead wood.  Removed.

20010918
 - (djm) Configure support for smartcards. Based on Ben's work.
 - (djm) Revert setgroups call, it causes problems on OS-X
 - (djm) Avoid warning on BSDgetopt
 - (djm) More makefile infrastructre for smartcard support, also based
   on Ben's work
 - (djm) Specify --datadir in RPM spec files so smartcard applet gets
    put somewhere sane. Add Ssh.bin to manifest.
 - (djm) Make smartcard support conditional in Redhat RPM spec
 - (bal) LICENCE update.  Has not been done in a while.
 - (stevesk) nchan.c: we use X/Open Sockets on HP-UX now so shutdown(2)
   returns ENOTCONN vs. EINVAL for socket not connected; remove EINVAL
   check. ok Lutz Jaenicke