@@ -8,6 +8,10 @@
    - markus@cvs.openbsd.org 2001/09/20 13:46:48
      [auth2.c]
      key_read returns now -1 or 1
+   - markus@cvs.openbsd.org 2001/09/20 13:50:40
+     [compat.c compat.h ssh.c]
+     bug compat: request a dummy channel for -N (no shell) sessions + 
+     cleanup; vinschen@redhat.com
 
 20010919
  - (bal) OpenBSD Sync
@@ -6541,4 +6545,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1552 2001/09/20 23:11:26 mouring Exp $
+$Id: ChangeLog,v 1.1553 2001/09/20 23:13:49 mouring Exp $
